<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.aashish.projectorrequest.MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayoutMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/hour1"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:visibility="gone"
            android:id="@+id/hour1header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/hour1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/hour2"
            android:visibility="gone"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/hour2header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/hour2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:text="@string/hour3"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:id="@+id/hour3header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/hour3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:text="@string/hour4"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:id="@+id/hour4header"/>

        <TextView
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/hour4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:text="@string/hour5"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/hour5header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/hour5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:text="@string/hour6"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/hour6header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/hour6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:text="@string/hour7"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:id="@+id/hour7header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/hour7"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/colorPrimary"
            android:text="@string/hour8"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:id="@+id/hour8header"/>

        <TextView
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/hour8"/>


    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/fab"/>


</android.support.design.widget.CoordinatorLayout>